--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,12 @@
     <title>Typescript boilerplate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="./main.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="h-full">
     <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
