--- a/public/preview.html
+++ b/public/preview.html
@@ -16,16 +16,9 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Link-sharing app</title>
   </head>
-  <body class="font-instrumentSans">
-    <p>
-      Links Profile Details Preview Customize your links Add/edit/remove links
-      below and then share all your profiles with the world! + Add new link
-      Let's get you started Use the “Add new link” button to get started. Once
-      you have more than one link, you can reorder and edit them. We're here to
-      help you share your profiles with everyone! Save
-    </p>
+  <body>
+    Back to Editor Share Link
   </body>
 </html>
