--- a/public/profile.html
+++ b/public/profile.html
@@ -19,13 +19,10 @@
 
     <title>Frontend Mentor | Link-sharing app</title>
   </head>
-  <body class="font-instrumentSans">
-    <p>
-      Links Profile Details Preview Customize your links Add/edit/remove links
-      below and then share all your profiles with the world! + Add new link
-      Let's get you started Use the “Add new link” button to get started. Once
-      you have more than one link, you can reorder and edit them. We're here to
-      help you share your profiles with everyone! Save
-    </p>
+  <body>
+    Links Profile Details Preview Profile Details Add your details to create a
+    personal touch to your profile. Profile picture + Upload Image Image must be
+    below 1024x1024px. Use PNG or JPG format. First name* e.g. John Last name*
+    e.g. Appleseed Email e.g. email@example.com Save
   </body>
 </html>
