--- a/public/preview.html
+++ b/public/preview.html
@@ -16,7 +16,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Link-sharing app</title>
+    <title>Link-sharing app</title>
   </head>
   <body>
     Back to Editor Share Link
