--- a/public/profile.html
+++ b/public/profile.html
@@ -17,7 +17,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Link-sharing app</title>
+    <title>Link-sharing app</title>
   </head>
   <body>
     Links Profile Details Preview Profile Details Add your details to create a
