--- a/public/login.html
+++ b/public/login.html
@@ -13,58 +13,59 @@
       rel="stylesheet"
     />
   </head>
-  <body class="h-full">
-    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-      <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-        <h2
-          class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
-        >
-          Sign in to your account
-        </h2>
+  <body class="h-full font-instrumentSans bg-greyLight text-greyDark">
+    <div class="flex min-h-full flex-col justify-center gap-12">
+      <div>
+        <img
+          class="mx-auto h-10 w-auto"
+          src="./images/logo-devlinks-large.svg"
+          alt="Your Company"
+        />
       </div>
-      <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="#" method="POST" id="login-form">
+
+      <div class="mx-auto min-w-lg bg-white rounded-lg p-10">
+        <div class="mb-10 flex flex-col gap-2">
+          <h2 class="text-hm font-bold leading-9 tracking-tight text-greyDark">
+            Login
+          </h2>
+          <p class="text-bm text-grey">
+            Add your details below to get back into the app
+          </p>
+        </div>
+
+        <form class="space-y-6" action="#" method="POST">
           <div>
-            <label
-              for="email"
-              class="block text-sm font-medium leading-6 text-gray-900"
+            <label for="email" class="text-bs text-greyDark"
               >Email address</label
             >
             <div class="mt-2">
               <input
+                placeholder="e.g. alex@email.com"
                 id="email"
                 name="email"
                 type="email"
                 autocomplete="email"
                 required
-                class="input input-bordered w-full bg-white"
+                class="block w-full border-borders rounded-md pl-10 placeholder:text-greyDark placeholder:text-opacity-50 focus:ring-1 focus:shadow-activeSelection focus:ring-inset focus:ring-purple email-input"
               />
             </div>
           </div>
 
           <div>
             <div class="flex items-center justify-between">
-              <label
-                for="password"
-                class="block text-sm font-medium leading-6 text-gray-900"
+              <label for="password" class="text-bs text-greyDark"
                 >Password</label
               >
-              <div class="text-sm">
-                <a
-                  href="#"
-                  class="font-semibold text-indigo-600 hover:text-indigo-500"
-                  >Forgot password?</a
-                >
-              </div>
             </div>
             <div class="mt-2">
               <input
                 id="password"
                 name="password"
                 type="password"
+                placeholder="Enter your password"
                 autocomplete="current-password"
                 required
-                class="input input-bordered w-full bg-white"
+                class="block w-full border-borders rounded-md pl-10 placeholder:text-greyDark placeholder:text-opacity-50 focus:ring-1 focus:shadow-activeSelection focus:ring-inset focus:ring-purple password-input"
               />
             </div>
           </div>
@@ -72,12 +73,17 @@
           <div>
             <button
               type="submit"
-              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+              class="bg-purple w-full text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight p-3 font-bold rounded-md"
             >
-              Sign in
+              Login
             </button>
           </div>
         </form>
+
+        <p class="mt-6 text-center text-sm text-gray-500">
+          Don't have an account?
+          <a href="#" class="text-purple">Create account</a>
+        </p>
       </div>
     </div>
     <script src="./js/pages/login.js" type="module" async defer></script>
