--- a/public/register.html
+++ b/public/register.html
@@ -23,11 +23,13 @@
         />
       </div>
 
-      <div class="sm:mx-auto bg-white rounded-lg p-10 max-w-lg w-full">
+      <div class="sm:mx-auto min-w-lg bg-white rounded-lg p-10 max-w-lg w-full">
         <div class="mb-10 flex flex-col gap-2">
-          <h2 class="sm:text-hl text-hm font-bold text-greyDark">Login</h2>
+          <h2 class="sm:text-hl text-hm font-bold text-greyDark">
+            Create account
+          </h2>
           <p class="text-bm text-grey">
-            Add your details below to get back into the app
+            Let’s get you started sharing your links!
           </p>
         </div>
 
@@ -51,7 +53,7 @@
           <div>
             <div class="flex items-center justify-between">
               <label for="password" class="text-bs text-greyDark"
-                >Password</label
+                >Create password</label
               >
             </div>
             <div class="mt-2">
@@ -59,29 +61,43 @@
                 id="password"
                 name="password"
                 type="password"
-                placeholder="Enter your password"
-                autocomplete="current-password"
+                placeholder="At least 8 characters"
                 class="block w-full border-borders rounded-md p-3 pl-10 placeholder:text-greyDark placeholder:text-opacity-50 focus:ring-0 focus:shadow-activeSelection focus:ring-inset focus:ring-purple password-input"
               />
             </div>
           </div>
-
+          <div>
+            <div class="flex items-center justify-between">
+              <label for="password" class="text-bs text-greyDark"
+                >Confirm password</label
+              >
+            </div>
+            <div class="mt-2">
+              <input
+                id="password"
+                name="password"
+                type="password"
+                placeholder="At least 8 characters"
+                class="block w-full border-borders rounded-md p-3 pl-10 placeholder:text-greyDark placeholder:text-opacity-50 focus:ring-0 focus:shadow-activeSelection focus:ring-inset focus:ring-purple password-input"
+              />
+            </div>
+          </div>
           <div>
             <button
               type="submit"
               class="transition ease-in-out bg-purple w-full text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight p-3 font-bold rounded-md"
             >
-              Login
+              Create new account
             </button>
           </div>
         </form>
 
         <p class="mt-6 text-center text-sm text-gray-500">
-          Don't have an account?
-          <a href="./register.html" class="text-purple">Create account</a>
+          Already have an account?
+          <a href="./login.html" class="text-purple">Login</a>
         </p>
       </div>
     </div>
-    <script src="./js/pages/login.js" type="module" async defer></script>
+    <script src="./js/pages/register.js" type="module" async defer></script>
   </body>
 </html>
