profile page header

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
           <span class="max-sm:hidden text-hs">Links</span>
         </button>
         <button
+          onclick="window.location.href='/profile.html'"
           class="header-profile-btn flex flex-1 gap-2 items-center py-2 text-grey font-semibold hover:text-purple"
         >
           <svg
@@ -83,12 +84,6 @@
         <span class="max-sm:hidden">Preview</span>
       </button>
     </header>
-    <p>
-      Links Profile Details Preview Customize your links Add/edit/remove links
-      below and then share all your profiles with the world! + Add new link
-      Let's get you started Use the “Add new link” button to get started. Once
-      you have more than one link, you can reorder and edit them. We're here to
-      help you share your profiles with everyone! Save
-    </p>
+    <p></p>
   </body>
 </html>
