adjusting spacing between buttons in header

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         alt=""
       />
       <img class="sm:hidden" src="./images/logo-devlinks-small.svg" alt="" />
-      <div class="flex gap-10">
+      <div class="flex">
         <button
           class="header-links-btn flex bg-purpleLight text-purple font-semibold gap-2 items-center justify-center rounded-md px-6 py-2"
         >
@@ -48,7 +48,7 @@
         </button>
         <button
           onclick="window.location.href='/profile.html'"
-          class="header-profile-btn flex flex-1 gap-2 items-center py-2 text-grey font-semibold hover:text-purple"
+          class="header-profile-btn flex flex-1 gap-2 items-center text-grey font-semibold hover:text-purple px-6 py-2"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
