--- a/public/profile.html
+++ b/public/profile.html
@@ -27,10 +27,10 @@
         alt=""
       />
       <img class="sm:hidden" src="./images/logo-devlinks-small.svg" alt="" />
-      <div class="flex gap-10">
+      <div class="flex">
         <button
           onclick="window.location.href='/index.html'"
-          class="header-profile-btn flex flex-1 gap-2 items-center py-2 text-grey font-semibold hover:text-purple"
+          class="header-profile-btn flex gap-2 items-center text-grey font-semibold hover:text-purple px-6 py-2"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -47,7 +47,7 @@
           <span class="max-sm:hidden text-hs">Links</span>
         </button>
         <button
-          class="header-links-btn flex bg-purpleLight text-purple font-semibold gap-2 items-center justify-center rounded-md px-6 py-2"
+          class="header-links-btn flex-1 flex bg-purpleLight text-purple font-semibold gap-2 items-center justify-center rounded-md px-6 py-2"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
