--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" class="h-full overflow-scroll">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,9 @@
     <title>Link-sharing app</title>
   </head>
 
-  <body class="font-instrumentSans bg-greyLight h-full p-4">
+  <body
+    class="font-instrumentSans bg-greyLight h-full sm:p-4 flex flex-col sm:gap-4 overflow-scroll"
+  >
     <header class="bg-white w-full flex justify-between p-2">
       <img
         class="max-sm:hidden w-36"
@@ -84,6 +86,78 @@
         <span class="max-sm:hidden">Preview</span>
       </button>
     </header>
-    <p></p>
+    <main class="flex flex-1 gap-4 max-sm:m-4">
+      <div
+        class="bg-white h-full w-full flex items-center justify-center max-md:hidden"
+      >
+        <div class="phone">
+          <div class="phone-inner">
+            <div class="camera"></div>
+            <div
+              class="mobile-profile mt-9 flex flex-col justify-center items-center gap-4"
+            >
+              <div
+                class="mobile-image-container mb-4 w-24 h-24 bg-greyLight rounded-full"
+              ></div>
+              <div
+                class="mobile-name-container w-40 h-4 bg-greyLight rounded-md"
+              ></div>
+              <div
+                class="mobile-email-container w-20 h-2 bg-greyLight rounded-md"
+              ></div>
+            </div>
+            <div
+              class="mobile-links mt-10 flex flex-col justify-center items-center gap-4"
+            >
+              <div class="w-60 h-11 bg-greyLight rounded-md"></div>
+              <div class="w-60 h-11 bg-greyLight rounded-md"></div>
+              <div class="w-60 h-11 bg-greyLight rounded-md"></div>
+              <div class="w-60 h-11 bg-greyLight rounded-md"></div>
+              <div class="w-60 h-11 bg-greyLight rounded-md"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bg-white h-full w-full flex flex-col">
+        <div class="p-10 flex-1 flex flex-col">
+          <h1 class="text-hm mb-2 font-bold text-greyDark">
+            Customize you links
+          </h1>
+          <p>
+            Add/edit/remove links below and then share all your profiles with
+            the world!
+          </p>
+          <button
+            class="border-purple w-full mb-5 mt-10 rounded-md border text-purple justify-center font-semibold hover:bg-purpleLight px-6 py-2"
+          >
+            + Add new link
+          </button>
+          <div
+            class="flex-1 flex justify-center items-center flex-col bg-greyLight p-5"
+          >
+            <img src="images/illustration-empty.svg" alt="" class="w-64" />
+            <div class="max-w-md text-center">
+              <h2 class="text-hm mb-2 font-bold text-greyDark">
+                Let's get you started
+              </h2>
+              <p>
+                Use the “Add new link” button to get started. Once you have more
+                than one link, you can reorder and edit them. We’re here to help
+                you share your profiles with everyone!
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <hr class="border-borders" />
+        <button
+          disabled
+          type="submit"
+          class="transition ease-in-out bg-purple text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight my-5 mx-10 sm:mr-10 font-bold rounded-md sm:self-end px-6 py-2"
+        >
+          Save
+        </button>
+      </div>
+    </main>
   </body>
 </html>
