--- a/public/profile.html
+++ b/public/profile.html
@@ -28,7 +28,7 @@
         src="./images/logo-devlinks-large.svg"
         alt=""
       />
-      <img class="sm:hidden" src="./images/logo-devlinks-small.svg" alt="" />
+
       <div class="flex">
         <button
           onclick="window.location.href='/index.html'"
@@ -127,30 +127,47 @@
             >
               <p class="sm:flex-1">Profile picture</p>
               <div
-                class="flex flex-col bg-purpleLight text-purple font-semibold gap-2 items-center justify-center rounded-md px-6 py-2 w-48 h-48"
+                id="profile-image-container"
+                class="relative bg-purpleLight text-purple font-semibold gap-2 items-center justify-center rounded-lg w-48 h-48"
               >
-                <label class="cursor-pointer" for="profile-image">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="40"
-                    height="40"
-                    fill="none"
-                    viewBox="0 0 40 40"
-                    class="mx-auto"
-                  >
-                    <path
-                      fill="#633CFF"
-                      d="M33.75 6.25H6.25a2.5 2.5 0 0 0-2.5 2.5v22.5a2.5 2.5 0 0 0 2.5 2.5h27.5a2.5 2.5 0 0 0 2.5-2.5V8.75a2.5 2.5 0 0 0-2.5-2.5Zm0 2.5v16.055l-4.073-4.072a2.5 2.5 0 0 0-3.536 0l-3.125 3.125-6.875-6.875a2.5 2.5 0 0 0-3.535 0L6.25 23.339V8.75h27.5ZM6.25 26.875l8.125-8.125 12.5 12.5H6.25v-4.375Zm27.5 4.375h-3.34l-5.624-5.625L27.91 22.5l5.839 5.84v2.91ZM22.5 15.625a1.875 1.875 0 1 1 3.75 0 1.875 1.875 0 0 1-3.75 0Z"
-                    />
-                  </svg>
-                  <span>+ Upload Image</span>
-                </label>
-                <input
-                  class="hidden"
-                  type="file"
-                  id="profile-image"
-                  accept="image/*"
+                <img
+                  class="object-cover hidden h-full w-full rounded-md absolute"
+                  id="profile-image-preview"
+                  src="./images/illustration-empty.svg"
+                  alt=""
                 />
+                <div
+                  id="overlay"
+                  class="absolute w-full h-full hidden bg-greyDark opacity-50 rounded-md"
+                ></div>
+                <div class="absolute right-10 top-16">
+                  <label
+                    class="cursor-pointer flex flex-col items-center"
+                    for="profile-image-input"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="40"
+                      height="40"
+                      class="label-svg"
+                      fill="none"
+                      viewBox="0 0 40 40"
+                      class="mx-auto"
+                    >
+                      <path
+                        fill="none"
+                        d="M33.75 6.25H6.25a2.5 2.5 0 0 0-2.5 2.5v22.5a2.5 2.5 0 0 0 2.5 2.5h27.5a2.5 2.5 0 0 0 2.5-2.5V8.75a2.5 2.5 0 0 0-2.5-2.5Zm0 2.5v16.055l-4.073-4.072a2.5 2.5 0 0 0-3.536 0l-3.125 3.125-6.875-6.875a2.5 2.5 0 0 0-3.535 0L6.25 23.339V8.75h27.5ZM6.25 26.875l8.125-8.125 12.5 12.5H6.25v-4.375Zm27.5 4.375h-3.34l-5.624-5.625L27.91 22.5l5.839 5.84v2.91ZM22.5 15.625a1.875 1.875 0 1 1 3.75 0 1.875 1.875 0 0 1-3.75 0Z"
+                      />
+                    </svg>
+                    <span id="image-label-text">+ Upload Image</span>
+                  </label>
+                  <input
+                    class="hidden"
+                    type="file"
+                    id="profile-image-input"
+                    accept="image/*"
+                  />
+                </div>
               </div>
               <p class="text-bs sm:flex-1">
                 Image must be below 1024x1024px. Use PNG or JPG format.
@@ -203,5 +220,6 @@
         </button>
       </form>
     </main>
+    <script src="./js/pages/profile.js" type="module" async defer></script>
   </body>
 </html>
