Adding missing logo in smaller devices

--- a/public/profile.html
+++ b/public/profile.html
@@ -28,6 +28,7 @@
         src="./images/logo-devlinks-large.svg"
         alt=""
       />
+      <img class="sm:hidden" src="./images/logo-devlinks-small.svg" alt="" />
 
       <div class="flex">
         <button
