Concistent spacing/rounding

--- a/public/profile.html
+++ b/public/profile.html
@@ -22,7 +22,7 @@
   <body
     class="font-instrumentSans bg-greyLight h-full sm:p-4 flex flex-col sm:gap-4 overflow-scroll"
   >
-    <header class="bg-white w-full flex justify-between p-2">
+    <header class="bg-white w-full flex justify-between p-2 rounded-md">
       <img
         class="max-sm:hidden w-36"
         src="./images/logo-devlinks-large.svg"
@@ -88,7 +88,7 @@
     </header>
     <main class="flex flex-1 gap-4 max-sm:m-4">
       <div
-        class="bg-white h-full w-full flex items-center justify-center max-lg:hidden"
+        class="bg-white h-full w-full flex items-center justify-center max-lg:hidden rounded-md"
       >
         <div class="phone">
           <div class="phone-inner">
@@ -118,13 +118,13 @@
           </div>
         </div>
       </div>
-      <form class="bg-white h-full w-full flex flex-col text-grey">
-        <div class="p-10 flex-1 flex flex-col">
+      <form class="bg-white h-full w-full flex flex-col text-grey rounded-md">
+        <div class="p-5 sm:p-10 flex-1 flex flex-col">
           <h1 class="text-hm mb-2 font-bold text-greyDark">Profile Details</h1>
           <p>Add your details to create a personal touch to your portfolio.</p>
           <div class="flex-1 flex flex-col gap-4 mt-10">
             <div
-              class="flex max-sm:flex-col justify-center sm:items-center bg-greyLight gap-5 p-5"
+              class="flex max-sm:flex-col justify-center sm:items-center bg-greyLight gap-5 p-5 rounded-md"
             >
               <p class="sm:flex-1">Profile picture</p>
               <div
@@ -175,7 +175,7 @@
               </p>
             </div>
             <div
-              class="flex justify-center items-center flex-col gap-4 bg-greyLight p-5"
+              class="flex justify-center items-center flex-col gap-4 bg-greyLight p-5 rounded-md"
             >
               <div
                 class="flex w-full items-center max-sm:flex-col max-sm:items-start"
@@ -215,7 +215,7 @@
         <button
           disabled
           type="submit"
-          class="transition ease-in-out bg-purple text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight my-5 mx-10 sm:mr-10 font-bold rounded-md sm:self-end px-6 py-2"
+          class="transition ease-in-out bg-purple text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight m-5 sm:mr-10 font-bold rounded-md lg:self-end px-6 py-2"
         >
           Save
         </button>
