--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <body
     class="font-instrumentSans bg-greyLight h-full sm:p-4 flex flex-col sm:gap-4 overflow-scroll"
   >
-    <header class="bg-white w-full flex justify-between p-2">
+    <header class="bg-white w-full flex justify-between p-2 rounded-md">
       <img
         class="max-sm:hidden w-36"
         src="./images/logo-devlinks-large.svg"
@@ -88,7 +88,7 @@
     </header>
     <main class="flex flex-1 gap-4 max-sm:m-4">
       <div
-        class="bg-white h-full w-full flex items-center justify-center max-md:hidden"
+        class="bg-white h-full w-full flex items-center justify-center max-lg:hidden rounded-md"
       >
         <div class="phone">
           <div class="phone-inner">
@@ -118,8 +118,8 @@
           </div>
         </div>
       </div>
-      <div class="bg-white h-full w-full flex flex-col">
-        <div class="p-10 flex-1 flex flex-col">
+      <div class="bg-white h-full w-full flex flex-col rounded-md">
+        <div class="p-5 sm:p-10 flex-1 flex flex-col">
           <h1 class="text-hm mb-2 font-bold text-greyDark">
             Customize you links
           </h1>
@@ -133,7 +133,7 @@
             + Add new link
           </button>
           <div
-            class="flex-1 flex justify-center items-center flex-col bg-greyLight p-5"
+            class="flex-1 flex justify-center items-center flex-col bg-greyLight p-5 rounded-md"
           >
             <img src="images/illustration-empty.svg" alt="" class="w-64" />
             <div class="max-w-md text-center">
@@ -153,7 +153,7 @@
         <button
           disabled
           type="submit"
-          class="transition ease-in-out bg-purple text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight my-5 mx-10 sm:mr-10 font-bold rounded-md sm:self-end px-6 py-2"
+          class="transition ease-in-out bg-purple text-white hover:bg-purpleHover hover:shadow-activeSelection disabled:bg-purpleLight m-5 sm:mr-10 font-bold rounded-md lg:self-end px-6 py-2"
         >
           Save
         </button>
