Populating mobile profile on links page

--- a/public/index.html
+++ b/public/index.html
@@ -96,14 +96,18 @@
             <div
               class="mobile-profile mt-9 flex flex-col justify-center items-center gap-4"
             >
+              <div class="mb-4 w-24 h-24 bg-greyLight rounded-full">
+                <img
+                  class="object-cover hidden h-full w-full rounded-full mobile-image-container border-2 border-purple"
+                  src=""
+                  alt=""
+                />
+              </div>
               <div
-                class="mobile-image-container mb-4 w-24 h-24 bg-greyLight rounded-full"
+                class="mobile-name-container min-w-40 h-4 bg-greyLight rounded-md text-greyDark text-center text-hs font-semibold"
               ></div>
               <div
-                class="mobile-name-container w-40 h-4 bg-greyLight rounded-md"
-              ></div>
-              <div
-                class="mobile-email-container w-20 h-2 bg-greyLight rounded-md"
+                class="mobile-email-container min-w-20 h-2 bg-greyLight rounded-md text-bs text-center"
               ></div>
             </div>
             <div
@@ -159,5 +163,6 @@
         </button>
       </div>
     </main>
+    <script src="./js/pages/index.js" type="module" async defer></script>
   </body>
 </html>
