Removing file extensions

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
           <span class="max-sm:hidden text-hs">Links</span>
         </button>
         <button
-          onclick="window.location.href='/profile.html'"
+          onclick="window.location.href='/profile'"
           class="header-profile-btn flex flex-1 gap-2 items-center text-grey font-semibold hover:text-purple px-6 py-2"
         >
           <svg
