--- a/public/login.html
+++ b/public/login.html
@@ -81,7 +81,7 @@
 
         <p class="mt-6 text-center text-sm text-gray-500">
           Don't have an account?
-          <a href="./register.html" class="text-purple">Create account</a>
+          <a href="./register" class="text-purple">Create account</a>
         </p>
       </div>
     </div>
