--- a/public/profile.html
+++ b/public/profile.html
@@ -32,7 +32,7 @@
 
       <div class="flex">
         <button
-          onclick="window.location.href='/index.html'"
+          onclick="window.location.href='/index'"
           class="header-profile-btn flex gap-2 items-center text-grey font-semibold hover:text-purple px-6 py-2"
         >
           <svg
