--- a/public/register.html
+++ b/public/register.html
@@ -98,7 +98,7 @@
 
         <p class="mt-6 text-center text-sm text-gray-500">
           Already have an account?
-          <a href="./login" class="text-purple">Login</a>
+          <a href="./login.html" class="text-purple">Login</a>
         </p>
       </div>
     </div>
