Relative toast container

--- a/public/profile.html
+++ b/public/profile.html
@@ -22,7 +22,7 @@
   <body
     class="font-instrumentSans bg-greyLight h-full sm:p-4 flex flex-col sm:gap-4 overflow-scroll"
   >
-    <div id="toast-container"></div>
+    <div id="toast-container" class="absolute"></div>
     <header class="bg-white w-full flex justify-between p-2 rounded-md">
       <img
         class="max-sm:hidden w-36"
