Adjusting spacing and overflow

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full overflow-scroll">
+<html class="min-h-svh" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,7 +21,7 @@
   </head>
 
   <body
-    class="font-instrumentSans bg-greyLight h-full sm:p-4 flex flex-col sm:gap-4 overflow-scroll"
+    class="font-instrumentSans flex flex-col min-h-svh bg-greyLight sm:p-4 sm:gap-4"
   >
     <header class="bg-white w-full flex justify-between p-2 rounded-md">
       <img
@@ -92,7 +92,7 @@
     </header>
     <main class="flex flex-1 gap-4 max-sm:m-4">
       <div
-        class="bg-white h-full w-full flex items-center justify-center max-lg:hidden rounded-md"
+        class="bg-white flex-1 flex items-center justify-center max-lg:hidden rounded-md"
       >
         <div class="phone">
           <div class="phone-inner">
@@ -126,7 +126,7 @@
           </div>
         </div>
       </div>
-      <div class="bg-white h-full w-full flex flex-col rounded-md">
+      <div class="bg-white flex flex-1 flex-col rounded-md">
         <div class="p-5 sm:p-10 flex-1 flex flex-col">
           <h1 class="text-hm mb-2 font-bold text-greyDark">
             Customize you links
