--- a/public/profile.html
+++ b/public/profile.html
@@ -192,7 +192,7 @@
                 <label class="flex-1" for="first-name">First Name*</label
                 ><input
                   required
-                  class="block flex-2 w-full border-borders rounded-md p-3 placeholder:text-greyDark placeholder:text-opacity-50 focus:ring-0 focus:shadow-activeSelection focus:ring-inset focus:ring-purple"
+                  class="block flex-2 w-full bg-white border-borders rounded-md p-3 placeholder:text-greyDark placeholder:text-opacity-50 focus:ring-0 focus:shadow-activeSelection focus:ring-inset focus:ring-purple"
                   type="text"
                   id="first-name"
                   placeholder="e.g. John"
