adding form element

--- a/public/index.html
+++ b/public/index.html
@@ -141,8 +141,7 @@
           >
             + Add new link
           </button>
-
-          <div id="add-link-container" class="flex flex-col gap-4 flex-1">
+          <form id="add-link-form" class="flex flex-col gap-4 flex-1">
             <div
               class="flex-1 flex justify-center items-center flex-col bg-greyLight p-5 rounded-md"
             >
@@ -158,9 +157,8 @@
                 </p>
               </div>
             </div>
-          </div>
+          </form>
         </div>
-
         <hr class="border-borders" />
         <button
           disabled
